--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@actions/artifact": "^1.1.1",
         "@actions/core": "^1.10.0",
+        "@annangela/eslint-plugin-prefer-reflect": "^2.0.1",
         "@csstools/postcss-is-pseudo-class": "^3.2.0",
         "@csstools/postcss-media-minmax": "^1.0.2",
         "@financial-times/js-features-analyser": "^0.4.3",
