feat(Gadget-libCachedCode): Add caching mechanism and support via `libCachedCode`
Add caching mechanism for `libCachedCode` to support retrieving cached code and injecting it to the page, with support for `script` and `css` types. Also, add `libCachedCode` as a readonly global variable and a hidden gadget in `.eslintrc.yaml`, `settings.json`, and `definition.yaml`. The `MediaWiki:Gadget-libCachedCode.js` script provides methods to get cached code, obtain the URL for cached code and inject cached code to the page.

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -31,6 +31,7 @@ globals:
   MOE_SKIN_GLOBAL_DATA_REF: readonly
   Cron: readonly
   ace: readonly
+  libCachedCode: readonly
 
 plugins:
   - "@annangela/prefer-reflect"
