--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "Gadget-LetYouDown",
         "Gadget-libAsyncLock",
         "Gadget-libBottomRightCorner",
+        "Gadget-libCachedCode",
         "Gadget-libHashwasm",
         "Gadget-libJQuery",
         "Gadget-libJSON5",
