feat(Gadget-temp-svgFix): introduce temp-svgFix
The Gadget-temp-svgFix script was added to fix thumbnail issues with SVG images. It replaces broken SVG thumbnails and removes the lazy-loading feature. The changes were made to the settings.json file (113 -> 114) and a new definition.yaml was created, which adds resources dependency.

See #202

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,6 +113,7 @@
         "Gadget-site-styles",
         "Gadget-SpecialWikitext",
         "Gadget-temp-editcheck",
+        "Gadget-temp-svgFix",
         "Gadget-uploader",
         "Gadget-UserLinkAvatar",
         "Gadget-userLinkAvatarMagnifier",
