--- a/src/gadgets/temp-svgFix/definition.yaml
+++ b/src/gadgets/temp-svgFix/definition.yaml
@@ -25,8 +25,9 @@ dependencies:
 
 _sites:
   - zh
+  - commons
 
-_section: editing
+_section: browsing
 
 _files:
   - MediaWiki:Gadget-temp-svgFix.js
