chore: Rename .yml to .yaml

--- a/.github/workflows/CodeQL.yaml
+++ b/.github/workflows/CodeQL.yaml
@@ -6,13 +6,13 @@ on:
       - "**.js"
       - "!scripts/test/*.js"
       - .github/workflows/CodeQL.yaml
-      - .github/codeql-config.yml
+      - .github/codeql-config.yaml
   pull_request:
     paths:
       - "**.js"
       - "!scripts/test/*.js"
       - .github/workflows/CodeQL.yaml
-      - .github/codeql-config.yml
+      - .github/codeql-config.yaml
   workflow_dispatch:
   schedule:
     - cron: 15 0 * * *
@@ -30,6 +30,6 @@ jobs:
         uses: github/codeql-action/init@v2
         with:
           languages: javascript
-          config-file: ./.github/codeql-config.yml
+          config-file: ./.github/codeql-config.yaml
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
