--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -54,6 +54,8 @@ permissions:
 jobs:
   postCommit:
     runs-on: ubuntu-latest
+    env:
+      status: skipped
     steps:
       - uses: actions/checkout@v3
         with:
@@ -110,10 +112,14 @@ jobs:
       - name: Show git status & push
         id: output
         run: node scripts/postCommit/push.js
+      - name: Marked as success
+        id: mark
+        shell: bash
+        run: echo "status=success" >> ${GITHUB_ENV}
     outputs:
       commits: ${{ steps.output.outputs.commits }}
       needLinterTest: ${{ steps.output.outputs.linterTest }}
-      postCommit: true
+      postCommit: ${{ env.status }}
   linter_test:
     runs-on: ubuntu-latest
     needs: postCommit
@@ -167,7 +173,7 @@ jobs:
       - name: Marked as success
         id: mark
         shell: bash
-        run: echo "success=true" >> ${GITHUB_OUTPUT}
+        run: echo "status=success" >> ${GITHUB_ENV}
     outputs:
       linterTest: ${{ env.status }}
   webhook:
@@ -179,5 +185,32 @@ jobs:
     env:
       needs: ${{ toJson(needs) }}
     steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        id: setup-node
+        with:
+          node-version: lts/*
+          check-latest: true
+          cache: npm
+      - name: Generate cache primary key based on nodejs's and npm's version and package-lock.json's hash
+        id: version
+        shell: bash
+        run: echo "version=node@$(node -v | grep -oP '(?<=^v)\d+')_npm@$(npm -v | grep -oP '^\d+')_package-lock@$(openssl dgst -sha3-512 package-lock.json | grep -oP '[\da-f]{128}')" >> ${GITHUB_OUTPUT} && cat ${GITHUB_OUTPUT}
+      - uses: actions/cache/restore@v3
+        name: Try to restore node_modules from cache
+        id: cache
+        with:
+          path: node_modules
+          key: ${{ steps.version.outputs.version }}
+      - name: Install dependencies if no cache for node_modules
+        run: npm run ci
+        if: success() && steps.cache.outputs.cache-hit != 'true'
+      - uses: actions/cache/save@v3
+        if: success() && steps.cache.outputs.cache-hit != 'true'
+        name: Save node_modules to cache
+        with:
+          path: node_modules
+          key: ${{ steps.cache.outputs.cache-primary-key }}
       - name: Fire the webhook of AnnAngela's server
         run: node scripts/fireWebhook/index.js
