--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -28,6 +28,14 @@ on:
       - .*.yaml
       - package-lock.json
   workflow_dispatch:
+    inputs:
+      manuallyLinterTest:
+        description: 如需手动触发格式检查，请选择 `true`
+        type: choice
+        default: "false"
+        options:
+          - "true"
+          - "false"
   schedule:
     - cron: 15 0 * * *
 
@@ -116,7 +124,7 @@ jobs:
   linter_test:
     runs-on: ubuntu-latest
     needs: postCommit
-    if: success() && needs.postCommit.outputs.linterTest == 'true'
+    if: success() && (needs.postCommit.outputs.linterTest == 'true' || github.event.inputs.manuallyLinterTest == 'true')
     env:
       commits: ${{ needs.postCommit.outputs.commits }}
     steps:
