fix(Gadget-wikieditor-highlight): Fix bug

--- a/src/gadgets/wikieditor-highlight/definition.yaml
+++ b/src/gadgets/wikieditor-highlight/definition.yaml
@@ -25,6 +25,7 @@ dependencies:
   - oojs-ui-core
   - ext.gadget.libPolyfill
   - ext.gadget.libCachedCode
+  - ext.gadget.LocalObjectStorage
 
 _sites:
   - zh
