feat(InPageEdit-v2): Remove unused eslint config & hook script, refactor main script
- Remove unused eslint config and hook script files from the InPageEdit-v2 folder
- Refactor the main script to use the InPageEdit API, add UI elements for vector and moeskin skins
- Add dependency on the libCachedCode gadget for caching the InPageEdit.min.js script.

--- a/src/gadgets/InPageEdit-v2/definition.yaml
+++ b/src/gadgets/InPageEdit-v2/definition.yaml
@@ -24,6 +24,7 @@ peers: []
 
 dependencies:
   - mediawiki.api
+  - ext.gadget.libCachedCode
 
 _sites:
   - zh
@@ -31,6 +32,5 @@ _sites:
 _section: editing
 
 _files:
-  - MediaWiki:Gadget-InPageEdit-v2-hook.js
   - MediaWiki:Gadget-InPageEdit-v2.css
   - MediaWiki:Gadget-InPageEdit-v2.js
