feat(gadgets): remove Wikiplus eslint and activation script
This commit adds script to add Wikiplus QuickEdit button and removes eslint and activation script from Wikiplus gadget. The script uses libCachedCode to inject cached code.

--- a/src/gadgets/Wikiplus/definition.yaml
+++ b/src/gadgets/Wikiplus/definition.yaml
@@ -22,7 +22,8 @@ rights:
 
 peers: []
 
-dependencies: []
+dependencies:
+  - ext.gadget.libCachedCode
 
 _sites:
   - zh
@@ -32,4 +33,3 @@ _section: editing
 _files:
   - MediaWiki:Gadget-Wikiplus.css
   - MediaWiki:Gadget-Wikiplus.js
-  - MediaWiki:Gadget-Wikiplus-activation.js
