--- a/.github/workflows/generateConfiguration.yaml
+++ b/.github/workflows/generateConfiguration.yaml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: 0 0 * * 1 # Every Monday
 
-concurrency: postCommit
+concurrency: generateConfiguration
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -41,11 +41,6 @@ jobs:
         with:
           path: node_modules
           key: ${{ steps.cache.outputs.cache-primary-key }}
-      - name: Reload the builder and linter cache
-        uses: actions/cache@v3
-        with:
-          path: .cache
-          key: cache@${{ github.ref }}
       - name: Prepare git
         run: node scripts/postCommit/prepareGit.js
       - name: Expose GitHub Runtime
