feat: Add scripts to ignore in postCommit.yaml
- Added exclusions for the two scripts to improve the efficiency of the workflow.
- Renamed the job that reloads the linter cache to reflect its specific purpose.

--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -5,6 +5,8 @@ on:
     paths:
       - scripts/**/*.js
       - "!scripts/test/*.js"
+      - "!scripts/generateUnrecognizableFeatures/*.js"
+      - "!scripts/detectHardcodedOutdatedNPMPackages/*.js"
       - src/**/*.js
       - src/**/*.css
       - src/**/definition.yaml
@@ -18,6 +20,8 @@ on:
     paths:
       - scripts/**/*.js
       - "!scripts/test/*.js"
+      - "!scripts/generateUnrecognizableFeatures/*.js"
+      - "!scripts/detectHardcodedOutdatedNPMPackages/*.js"
       - src/**/*.js
       - src/**/*.css
       - src/**/definition.yaml
@@ -92,7 +96,7 @@ jobs:
         with:
           path: node_modules
           key: ${{ steps.cache.outputs.cache-primary-key }}
-      - name: Reload the builder and linter cache
+      - name: Reload the linter cache
         uses: actions/cache@v3
         with:
           path: .cache
@@ -155,7 +159,7 @@ jobs:
         with:
           path: node_modules
           key: ${{ steps.cache.outputs.cache-primary-key }}
-      - name: Reload the builder and linter cache
+      - name: Reload the linter cache
         uses: actions/cache@v3
         with:
           path: .cache
