--- a/src/gadgets/queryContributions/definition.yaml
+++ b/src/gadgets/queryContributions/definition.yaml
@@ -27,6 +27,7 @@ dependencies:
   - mediawiki.user
   - jquery.tablesorter
   - ext.gadget.libPolyfill
+  - ext.gadget.libCachedCode
 
 _sites:
   - zh
