--- a/.github/workflows/auto_assign.yaml
+++ b/.github/workflows/auto_assign.yaml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: add assignees and reviewers
         run: |
-          gh pr edit ${{ github.pull_request.id }} --add-assignee $(yq eval '.assignees | join(",")' .github/auto_assign.yaml) --add-reviewer $(yq eval '.reviewers | join(",")' .github/auto_assign.yaml)
+          gh pr edit ${{ github.pull_request.id }} --add-assignee "$(yq eval '.assignees | join(",")' .github/auto_assign.yaml)" --add-reviewer "$(yq eval '.reviewers | join(",")' .github/auto_assign.yaml)"
