ci: Update auto_assign.yaml

--- a/.github/workflows/auto_assign.yaml
+++ b/.github/workflows/auto_assign.yaml
@@ -5,6 +5,9 @@ on:
       - opened
       - ready_for_review
 
+env:
+  GH_TOKEN: ${{ github.token }}
+
 jobs:
   add-reviews:
     runs-on: ubuntu-latest
