ci: Update auto_assign.yaml

--- a/.github/workflows/auto_assign.yaml
+++ b/.github/workflows/auto_assign.yaml
@@ -8,6 +8,9 @@ on:
 env:
   GH_TOKEN: ${{ github.token }}
 
+permissions:
+  pull-requests: write
+
 jobs:
   add-reviews:
     runs-on: ubuntu-latest
