--- a/.github/workflows/CodeQL.yaml
+++ b/.github/workflows/CodeQL.yaml
@@ -13,6 +13,7 @@ on:
       - "!scripts/test/*.js"
       - .github/workflows/CodeQL.yaml
       - .github/codeql-config.yaml
+  merge_group:
   workflow_dispatch:
   schedule:
     - cron: 15 0 * * *
