--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -7,6 +7,7 @@ on:
       - "!scripts/test/*.js"
       - "!scripts/generateUnrecognizableFeatures/*.js"
       - "!scripts/detectHardcodedOutdatedNPMPackages/*.js"
+      - "!scripts/autoAssign/*.js"
       - src/**/*.js
       - src/**/*.css
       - src/**/definition.yaml
@@ -23,6 +24,7 @@ on:
       - "!scripts/test/*.js"
       - "!scripts/generateUnrecognizableFeatures/*.js"
       - "!scripts/detectHardcodedOutdatedNPMPackages/*.js"
+      - "!scripts/autoAssign/*.js"
       - src/**/*.js
       - src/**/*.css
       - src/**/definition.yaml
