--- a/.github/workflows/auto_assign.yaml
+++ b/.github/workflows/auto_assign.yaml
@@ -15,6 +15,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
+          check-latest: true
+          cache: npm
+      - name: Generate cache primary key based on nodejs's and npm's version and package-lock.json's hash
+        id: version
+        shell: bash
+        run: echo "version=node@$(node -v | grep -oP '(?<=^v)\d+')_npm@$(npm -v | grep -oP '^\d+')_package-lock@$(openssl dgst -sha3-512 package-lock.json | grep -oP '[\da-f]{128}')" >> ${GITHUB_OUTPUT} && cat ${GITHUB_OUTPUT}
+      - uses: actions/cache/restore@v3
+        name: Try to restore node_modules from cache
+        id: cache
+        with:
+          path: node_modules
+          key: ${{ steps.version.outputs.version }}
+      - name: Install dependencies if no cache for node_modules
+        run: npm run ci
+        if: success() && steps.cache.outputs.cache-hit != 'true'
+      - uses: actions/cache/save@v3
+        if: success() && steps.cache.outputs.cache-hit != 'true'
+        name: Save node_modules to cache
+        with:
+          path: node_modules
+          key: ${{ steps.cache.outputs.cache-primary-key }}
       - name: add assignees and reviewers
         run: |
           node scripts/test/test.js
