ci: auto assign

--- a/.github/workflows/auto_assign.yaml
+++ b/.github/workflows/auto_assign.yaml
@@ -6,7 +6,10 @@ on:
       - ready_for_review
 
 env:
-  GH_TOKEN: ${{ github.token }}
+  APP_ID: ${{ secrets.APP_ID }}
+  PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+  CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
 
 permissions: write-all
 
@@ -40,8 +43,6 @@ jobs:
         with:
           path: node_modules
           key: ${{ steps.cache.outputs.cache-primary-key }}
-      - name: Expose GitHub Runtime
-        uses: crazy-max/ghaction-github-runtime@v2
       - name: add assignees and reviewers
         run: |
-          node scripts/test/test.js
+          node scripts/autoAssign/index.js
