--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@csstools/postcss-media-minmax": "^1.0.3",
         "@financial-times/js-features-analyser": "^0.4.3",
         "@octokit/auth-action": "^3.0.0",
+        "@octokit/auth-app": "^5.0.3",
         "@octokit/auth-unauthenticated": "^4.0.0",
         "@octokit/plugin-retry": "^5.0.3",
         "@octokit/rest": "^19.0.11",
