ci: Update CodeQL.yaml

--- a/.github/workflows/CodeQL.yaml
+++ b/.github/workflows/CodeQL.yaml
@@ -22,6 +22,14 @@ concurrency:
   group: ${{ github.workflow_ref }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  actions: read
+  checks: write
+  contents: write
+  pull-requests: write
+  security-events: write
+  statuses: write
+
 jobs:
   CodeQL:
     runs-on: ubuntu-latest
