feat: Update dependabot.yaml

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -21,5 +21,5 @@ updates:
       time: "08:15"
       timezone: "Asia/Shanghai"
     commit-message:
-      prefix: "github-actions"
+      prefix: "gha"
       include: "scope"
