--- a/.github/workflows/CodeQL.yaml
+++ b/.github/workflows/CodeQL.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
-          languages: javascript, yaml
+          languages: javascript
           config-file: ./.github/codeql-config.yaml
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
