--- a/.github/workflows/detectHardcodedOutdatedNPMPackages.yaml
+++ b/.github/workflows/detectHardcodedOutdatedNPMPackages.yaml
@@ -3,7 +3,7 @@ name: Detect hardcoded-outdated NPM packages
 on:
   workflow_dispatch:
   schedule:
-    - cron: 30 23 * * * # Every day
+    - cron: 0 23 * * * # Every 07:00 CST
 
 concurrency: detectHardcodedOutdatedNPMPackages
 
