--- a/.github/workflows/generateConfiguration.yaml
+++ b/.github/workflows/generateConfiguration.yaml
@@ -3,7 +3,7 @@ name: Generate configuration
 on:
   workflow_dispatch:
   schedule:
-    - cron: 30 23 * * 0 # Every Monday
+    - cron: 0 23 * * * # Every 07:00 CST
 
 concurrency: generateConfiguration
 
