--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -44,7 +44,7 @@ on:
           - "true"
           - "false"
   schedule:
-    - cron: 45 23 * * *
+    - cron: 0 23 * * * # Every 07:00 CST
 
 concurrency:
   group: ${{ github.workflow_ref }}-${{ github.ref }}
