--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -9,7 +9,7 @@ updates:
     directory: / # Location of package manifests
     schedule:
       interval: daily
-      time: 07:30
+      time: '07:30'
       timezone: Asia/Shanghai
     commit-message:
       prefix: npm
@@ -18,7 +18,7 @@ updates:
     directory: /
     schedule:
       interval: daily
-      time: 07:30
+      time: '07:30'
       timezone: Asia/Shanghai
     commit-message:
       prefix: gha
