chore: Update package.json

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
         "url": "https://github.com/MoegirlPediaInterfaceAdmins/MoegirlPediaInterfaceCodes.git"
     },
     "license": "",
-    "private": true,
+    "private": true,,
     "engines": {
-        "node": "16.* || 18.*"
-    },
+        "node": "^18.17 || ^20.1"
+    }
     "scripts": {
         "test": "eslint src && stylelint src/**/*.css && v8r && node scripts/emailmapChecker/index.js",
         "format": "eslint src --fix && stylelint src/**/*.css --fix",
