--- a/.github/workflows/detectHardcodedOutdatedNPMPackages.yaml
+++ b/.github/workflows/detectHardcodedOutdatedNPMPackages.yaml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          show-progress: false
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
