--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -73,6 +73,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          show-progress: false
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -112,6 +113,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          show-progress: false
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -171,6 +173,8 @@ jobs:
       commits: ${{ needs.postCommit.outputs.commits }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          show-progress: false
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -220,6 +224,8 @@ jobs:
     if: always() && needs.skipCI.outputs.skip != 'true'
     steps:
       - uses: actions/checkout@v4
+        with:
+          show-progress: false
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
