feat: 清除缓存小工具移除时间、适配萌皮 (#336)
* feat: 新增purgecache.css

* chore: Rename Purgecache.css to MediaWiki:Gadget-Purgecache.css

* feat: purgecache去除时间、适配萌皮

* auto(Gadget-Purgecache): gadget definition updated by generateGadgetsDefinition

* feat(purgecache): definition

* chore: typo

* feat(purgecache): 避免误伤

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/src/gadgets/Purgecache/definition.yaml
+++ b/src/gadgets/Purgecache/definition.yaml
@@ -22,8 +22,6 @@ rights:
 peers: []
 
 dependencies:
-  - moment
-  - ext.gadget.cron
   - ext.gadget.site-lib
 
 _sites:
@@ -34,3 +32,4 @@ _section: browsing
 
 _files:
   - MediaWiki:Gadget-Purgecache.js
+  - MediaWiki:Gadget-Purgecache.css
