--- a/.github/workflows/CodeQL.yaml
+++ b/.github/workflows/CodeQL.yaml
@@ -6,13 +6,11 @@ on:
       - "**.js"
       - "!scripts/test/*.js"
       - .github/workflows/CodeQL.yaml
-      - .github/codeql-config.yaml
   pull_request:
     paths:
       - "**.js"
       - "!scripts/test/*.js"
       - .github/workflows/CodeQL.yaml
-      - .github/codeql-config.yaml
   merge_group:
   workflow_dispatch:
   schedule:
@@ -37,6 +35,6 @@ jobs:
         uses: github/codeql-action/init@v2
         with:
           languages: javascript
-          config-file: ./.github/codeql-config.yaml
+          queries: +security-and-quality
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
