fix(Gadget-moveToUserSubpage): 少个引用

--- a/src/gadgets/moveToUserSubpage/definition.yaml
+++ b/src/gadgets/moveToUserSubpage/definition.yaml
@@ -23,6 +23,7 @@ rights:
 peers: []
 
 dependencies:
+  - ext.gadget.site-lib
   - ext.gadget.libOOUIDialog
   - mediawiki.api
   - mediawiki.notification
