--- a/src/gadgets/MarkAsResolved-restricted/definition.yaml
+++ b/src/gadgets/MarkAsResolved-restricted/definition.yaml
@@ -34,4 +34,5 @@ _sites:
 _section: maintenance
 
 _files:
+  - MediaWiki:Gadget-MarkAsResolved.css
   - MediaWiki:Gadget-MarkAsResolved-restricted.js
