--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -1,5 +1,11 @@
 extends: stylelint-config-standard
 
+reportDescriptionlessDisables: true
+
+reportInvalidScopeDisables: true
+
+reportNeedlessDisables: true
+
 ignoreFiles:
   - dist/**/*.css
 
