--- a/.github/workflows/postCommit.yaml
+++ b/.github/workflows/postCommit.yaml
@@ -39,14 +39,6 @@ on:
       - .*.yaml
       - package-lock.json
   workflow_dispatch:
-    inputs:
-      manuallyLinterTest:
-        description: 如需手动触发格式检查，请选择上方 Branch 为 master，下方为 true
-        type: choice
-        default: "false"
-        options:
-          - "true"
-          - "false"
   schedule:
     - cron: 0 23 * * * # Every 07:00 CST
 
@@ -112,7 +104,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - skipCI
-    if: success() && needs.skipCI.outputs.skip != 'true'
+    if: always() && needs.skipCI.result == 'success' && needs.skipCI.outputs.skip != 'true'
     steps:
       - uses: actions/checkout@v4
         with:
@@ -172,7 +164,7 @@ jobs:
     needs:
       - skipCI
       - postCommit
-    if: success() && needs.skipCI.outputs.skip != 'true' && (needs.postCommit.outputs.linterTest == 'true' || github.event.inputs.manuallyLinterTest == 'true')
+    if: always() && needs.skipCI.result == 'success' && needs.skipCI.outputs.skip != 'true'
     env:
       commits: ${{ needs.postCommit.outputs.commits }}
     steps:
@@ -218,7 +210,15 @@ jobs:
       - name: Run v8r
         run: echo "::group::v8r output" && npx v8r && echo "::endgroup::"
       - name: Check .mailmap
+        if: needs.postCommit.result == 'success'
         run: node scripts/emailmapChecker/index.js
+      - name: Infomation about linter test failure
+        if: failure()
+        run: |
+          echo "如果代码检查失败，你可以通过以下方式查看错误原因："
+          echo "1. 如果本次提交属于 Pull Request，你可以在该 PR 的 【Files changed】 标签页查看错误原因；"
+          echo "2. 如果本次提交属于直接推送 commit，你可以在该 commit 页查看错误原因。"
+          echo "你可能需要下拉到对应页面的最底部来查看未被修改的文件的错误原因。"
   webhook:
     runs-on: ubuntu-latest
     needs:
