--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "./.vscode/json-schemas/gadget-definition.json": "src/gadgets/*/definition.yaml"
     },
     "files.insertFinalNewline": true,
+    "eslint.experimental.useFlatConfig": false,
     "conventionalCommits.scopes": [
         "Gadget-abusefilter33test",
         "Gadget-abusefilterEdit",
